--- a/03-WebServer/homework/Beatles/index.html
+++ b/03-WebServer/homework/Beatles/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+ <html lang="eng">
+ <head>
+	<meta charset="utf-8">
+ 	<title>Beatles API</title>
+ </head>
+ <body>
+     <div class="jumbotron">
+        <h1>WELCOME!</h1>
+        <p>To this beatles Api!</p>
+    </div>
+    <div>
+        <h1>[nombreBeatle]</h1>
+        <p>[fechaNacimiento]</p>
+        <img src=[url] alt=[nombreBeatle] />
+    </div>
+ </body>
+ </html>
